# exo25_web

./: Exoplanets.db  pyproject.toml  wsgi.py
exo25_web/: app.py
exo25_web/blueprints/: __init__.py  browse.py  create.py  home.py  learn.py
exo25_web/database/: db.py
exo25_web/static/scripts/: index.js
exo25_web/static/style/: style.css
exo25_web/static/unity/: style.css
exo25_web/templates/: base.html  browse.html  create.html  home.html  learn.html  planet.html  search.html
